external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_quantifier_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_quantifier_fail.move:2:5
  │
2 │     spec module {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_quantifier_fail.move:2:17
  │
2 │     spec module {
  │                 ^
  │                 │
  │                 Unexpected '{'
  │                 Expected an address or an identifier

